# owattayo

./: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  index.html  main.py  pyproject.toml
.claude/: settings.json
.devcontainer/: compose.yaml  devcontainer.json
.devcontainer/claude-code/: Dockerfile
.devcontainer/firewall/: devcontainer-feature.json  install.sh
.devcontainer/workspace-owner/: update-workspace-owner.sh
static/: index.html
